--- a/index.html
+++ b/index.html
@@ -25,6 +25,15 @@ function sendData() {
   .then(data => alert("ตอบกลับ: " + data.reply))
   .catch(err => console.error(err));
 }
+
+function doOptions(e) {
+  return ContentService.createTextOutput("")
+    .setMimeType(ContentService.MimeType.TEXT)
+    .setHeader("Access-Control-Allow-Origin", "*")
+    .setHeader("Access-Control-Allow-Headers", "Content-Type")
+    .setHeader("Access-Control-Allow-Methods", "POST, OPTIONS");
+}
+
 </script>
 </body>
 </html>
